Timetable: fix overlapping borders in timetable periods

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -907,6 +907,10 @@ td.hiddenReveal, div.hiddenReveal, tr.hiddenReveal td {
 }
 
 /* Timetable styles */
+#tt * {
+    box-sizing: content-box;
+}
+
 th.ttCalendarBar {
 	vertical-align: top;
 	width: 100%;
